@@ -2,6 +2,8 @@
 
 	* Set new/load/save/preferences/about dialogs to be transient of the main application
 	  window (always centered and on top, not in window list) (Bug #510911).
+        * src/lib/gtkui/network.py: Handle the case where the throbber image is only one
+          frame (Bug #511693)
 
 2008-01-20  Andreas Røsdal  <andreasr@gnome.org>
 
